optimized populating new recipes to prevent website flickering

--- a/source/styles/explore-page.css
+++ b/source/styles/explore-page.css
@@ -22,8 +22,8 @@
   font-family: Helvetica, sans-serif;
 }
 
-.hidden {
-  display: none;
+.make-invisible {
+  visibility: hidden;
 }
 
 #explore-top-level {
